# downsyndrome

./: .gitignore  Dockerfile  README.md  docker-compose.yml  down.py  main.py  nginx.conf  pyproject.toml  quickstart.bat  quickstart.py  quickstart.sh  requirements.txt  ui.Dockerfile
.claude/: settings.local.json
api/: app.py
models/: label_map.pkl  model_config.json  registry.json
notebook/: down_syndrome.ipynb
src/: model.py  prediction.py  preprocessing.py
tests/: locustfile.py
ui/: dashboard.js  index.html
